Tab dragging: Fix the new selector item stacking order regression.

The new selector item's window and its |item_widget_| should be placed
below the dragged window.

Bug: 871580
Change-Id: I48d5705c687b4b75518d5ec47c71b8f746f22587
Reviewed-on: https://chromium-review.googlesource.com/1164525
Reviewed-by: Min Chen <minch@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581048}
Former-commit-id: ddb03e9b837d10701d917f91346f0a2fb68648e3